# CSR_Education

./: .gitignore  README.md
Stage_Lou_Marze - Copy/Activites/Evitement_obstacle/: parameters.json
Stage_Lou_Marze - Copy/Activites/Programme_python/: Stage_Lou_Marze - Shortcut.lnk
Stage_Lou_Marze - Copy/Activites/Suivi_ligne/entrainement_petite_salle/: network.pth  network.pth.buffer.npz
Stage_Lou_Marze - Copy/Activites/Suivi_ligne/salle_reu/: network.pth.buffer.npz
Stage_Lou_Marze - Copy/ressources/TP KNN/: experience.buffer.npz.buffer.npz  parameters.json
Stage_Lou_Marze - Copy/ressources/activites/Programme python/: danse_victoire.py
Stage_Lou_Marze - Copy/ressources/programmation/: reseau_pytorch.py  supervised_classification_TP_KNN.py
Stage_Lou_Marze/Activites/EXPLICATION RESEAU/: parameters.json
Stage_Lou_Marze/Activites/Evitement_obstacle/: network.pth
Stage_Lou_Marze/Activites/Programme_python/: carre.py
Stage_Lou_Marze/Activites/Suivi_de_ballon/: network.pth.buffer.npz
Stage_Lou_Marze/Activites/Suivi_ligne/salle_reu/: network.pth
Stage_Lou_Marze/Activites/Teleguidage/: parameters.json
Stage_Lou_Marze/ressources/programmation/: reinforcement_discrete_TP_Reinforcement_Learning.py  template.py
WebCam_YOLO/: main.py  pyproject.toml
WebCam_YOLO/webcam/: webcam_dessins.py  webcam_segmentation.py
Webcam_drawing/: adaptive_threshold_tester.py  canny_edge_tester.py  print_page.py  pyproject.toml  rotating_circle.py  test.py  test_scribble.py  test_webcam_aruco.py  utils.py  webcam_aruco.py  webcam_aruco_improved.py  webcam_aruco_subtitle.py
(+41 files in other folders)
